--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Set up Gradle
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Run Maven tests
-        run: mvn test -Dspring.profiles.active=ci
+      - name: Run Gradle tests
+        run: ./gradlew test -Dspring.profiles.active=ci
