--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+  env:
+    LINE_CLIENT_ID: ${{ secrets.LINE_CLIENT_ID }}
+    LINE_CLIENT_SECRET: ${{ secrets.LINE_CLIENT_SECRET }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
