--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,4 @@ spring:
 line:
   client_id: ${LINE_CLIENT_ID:default}
   client-secret: ${LINE_CLIENT_SECRET}
-  redirect_uri: ${REDIRECT_URI}
+  redirect_uri: ${LINE_REDIRECT_URI}
