--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Run Checkstyle
+        run: ./gradlew check
+
       - name: Set up Gradle
         uses: gradle/wrapper-validation-action@v1
 
