バグチェックの対象が誤ってたので修正3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run SpotBugs
         run: |
-          ./gradlew name spotbugsTest
+          ./gradlew spotbugsMain spotbugsTest
         continue-on-error: true
 
       - name: Upload SpotBugs report
